--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
+    "moment": "^2.21.0",
+    "ng2-currency-mask": "^5.3.1",
+    "ng2-toasty": "^4.0.3",
+    "primeng": "^5.2.3",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
